fixed z-index of nav-bar

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@
     background-color: #00a087;
     color: #e8fdff;
     float: left;
+    z-index: 1;
 }
 
 #nav-bar .logo {
